--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>368 Website Starter</title>
+  <title>Monster Truck</title>
 	
  <link rel="icon" href="favicon.ico">	
  
@@ -17,7 +17,7 @@
 	<div class="container">
 		
 
-		<h1>368 Website Starter</h1>
+		<h1>Monster Truck</h1>
 
 
 		<!-- No Content After -->
