--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">				
   <link rel="stylesheet" href="css/styles.css">	
+  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
@@ -18,6 +19,14 @@
 		
 
 		<h1>Monster Truck</h1>
+
+		<p>A monster truck is a vehicle that is typically styled after pickup trucks' bodies, modified or purposely built with extremely large wheels and suspension. They are used for competition and popular sports entertainment and in some cases they are featured alongside motocross races, mud bogging, tractor pulls and car-eating robots.
+
+		A monster truck show sometimes involves the truck crushing smaller vehicles beneath its huge tires. These trucks can run up and over most man-made barriers, so they are equipped with remote shut-off switches, called the Remote Ignition Interruptor (RII), to help prevent an accident if the driver loses control at any time. At some events, only one truck is on the course at a time, while most feature two drivers racing each other on symmetrical tracks, with the losing driver eliminated in single-elimination tournament fashion.
+
+		In recent years, many monster truck competitions have ended with a "freestyle" event. Somewhat akin to dressage with giant trucks, drivers are free to select their own course around the track and its obstacles. Drivers will often try "donuts", wheelstands and jumps during this segment. Additional items for the drivers to crush, usually including a motor home, are frequently placed on the track specifically for the freestyle event. Other obstacles sometimes placed on the track include school buses and small airplanes.</p>
+
+		<img src="img/t1.jpg">
 
 
 		<!-- No Content After -->
